--- a/package.json
+++ b/package.json
@@ -6,13 +6,14 @@
   "dependencies": {
     "ejs": "^2.6.2",
     "express": "^4.17.1",
+    "mongodb": "^3.3.2",
     "validator": "^11.1.0"
   },
   "devDependencies": {
     "nodemon": "^1.19.1"
   },
   "scripts": {
-    "start": "nodemon app.js",
+    "start": "nodemon db",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
