--- a/package.json
+++ b/package.json
@@ -5,9 +5,11 @@
   "main": "index.js",
   "dependencies": {
     "bcryptjs": "^2.4.3",
+    "connect-mongo": "^3.0.0",
     "dotenv": "^8.1.0",
     "ejs": "^2.6.2",
     "express": "^4.17.1",
+    "express-session": "^1.16.2",
     "mongodb": "^3.3.2",
     "validator": "^11.1.0"
   },
